refactor(api): 调整接口路径并优化用户信息字段
- 修改前端登录、刷新token、登出及权限码接口路径，统一添加 /api/admin 前缀
- 将部门、字典等相关API接口路径添加 /api/admin 前缀
- 将用户信息相关的 realName 字段改为 nickname，更新头像显示逻辑
- 优化基础设置视图，支持编辑昵称、邮箱、手机号，添加提交更新接口
- 扩展用户类型定义，包含邮箱、手机号和角色名称列表字段
- 调整部门和用户相关字段 phone 改为 mobile
- 优化表单验证规则，使用 zod 进行更严格的字段验证
- 删除 ApiResponse 中不再使用的 error 方法，新增响应消息格式化处理
- 新增业务异常统一处理类 BizExceptionHandlerAdvice，捕捉业务和系统异常
- 增加全局响应体消息格式化拦截处理，实现消息参数格式化
- 优化默认元对象填充处理器，使用 Sa-Token 获取当前用户ID，处理未登录情况返回0L
- 修正公共错误码和提示文本，增加上传文件过大等错误码，调整提示文案
- 移除演示相关本地化文件
- 优化内容加载组件，结合路由和请求状态控制显示加载动画
- 新增系统更新日志相关表单和表格配置
- 规范并统一Vue组件中用户信息显示，使用nickname替代realName
- 调整前端项目环境变量命名空间，避免缓存和存储冲突